--- a/app/src/main/res/layout/record_list.xml
+++ b/app/src/main/res/layout/record_list.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:id="@+id/layoutid">
 
     <TextView
         android:textSize="14sp"
